# flask_study

./: .gitignore  Makefile  app.db  config.py  pyproject.toml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: base.html  index.html  login.html
migrations/versions/: 3a1e7a031474_posts_table.py  ce8cb998dfb7_users_table.py
