[project]
name = "flask-study"
version = "0.1.0"
description = ""
authors = [
    {name = "ulissesbon",email = "ulisses.bonfim06@aluno.ifce.edu.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
