[tool.poetry]
package-mode = false

[project]
name = "flask-study"
version = "0.1.0"
description = ""
authors = [
    {name = "ulissesbon",email = "ulisses.bonfim06@aluno.ifce.edu.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"